Fix clipboard icon to hopefully not jump around so much. Also fixed text selection for strings.

--- a/src/style/scss/global.scss
+++ b/src/style/scss/global.scss
@@ -14,23 +14,41 @@
     }
 
     .object-key-val {
-        &:hover > span > .object-meta-data {
+        & > span > .object-meta-data {
             & > .copy-to-clipboard-container {
                 display: inline-block;
+                opacity: 0.1;
             }
             & > .click-to-add {
                 display: inline-block;
+                opacity: 0.1;
             }
             & > .click-to-remove {
                 display: inline-block;
+                opacity: 0.1;
+            }
+        }
+        &:hover > span > .object-meta-data {
+            & > .copy-to-clipboard-container {
+                opacity: 1.0;
+            }
+            & > .click-to-add {
+                opacity: 1.0;
+            }
+            & > .click-to-remove {
+                opacity: 1.0;
             }
         }
     }
 
     .variable-row {
+        & .copy-to-clipboard-container {
+            display: inline-block;
+            opacity: 0.1;
+        }
         &:hover {
             & .copy-to-clipboard-container {
-                display: inline-block;
+                opacity: 1.0;
             }
         }
     }
